alignment-fix

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -136,7 +136,6 @@ translate: 0 -5px;
             flex-direction: column;
             justify-content: space-around;
             align-items: center;
-            margin-right: 0;
             height: calc(100vh - 150px);
         
             padding: 20px;
